Fix sub text overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -168,6 +168,11 @@
        word-break: break-word;
     width: 80%;
   }
+  .sub-text{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
   
   
 }
